--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ and is wrapped around the whole page content, except for the footer in this exam
         <img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
         <span class="w3-large">Mingsum</span><br>
         <span>Lorem ipsum dipsum</span>
+        <span>God is faithful</span>
       </li>  
     </ul>
   </div>
